DLP/bin/sintactico/y.output
   0  $accept : programa $end

   1  programa : lista_definiciones

   2  lista_definiciones : lista_definiciones definiciones
   3                     | definiciones

   4  definiciones : defFuncion
   5               | declaracion

   6  defFuncion : DEF ID '(' parametros ')' AS tipo '{' lista_de_declaraciones lista_de_sentencias '}'
   7             | DEF ID '(' parametros ')' '{' lista_de_declaraciones lista_de_sentencias '}'

   8  lista_de_sentencias : sentencia lista_de_sentencias
   9                      |

  10  lista_de_declaraciones : lista_de_declaraciones declaracion
  11                         |

  12  declaracion : lista_indentificadores AS tipo ';'

  13  lista_indentificadores : lista_indentificadores ',' ID
  14                         | ID

  15  parametros : parametros ',' parametro
  16             | parametro

  17  parametro : ID AS tipo
  18            |

  19  argumentos_InvocFuncion : argumentos_InvocFuncion ',' InvocFuncion
  20                          | InvocFuncion

  21  InvocFuncion : expresion
  22               |

  23  expresion : expresion '+' expresion
  24            | expresion '-' expresion
  25            | expresion '*' expresion
  26            | expresion '/' expresion
  27            | expresion '%' expresion
  28            | expresion CAST tipo
  29            | expresion '.' ID
  30            | ID '(' argumentos_InvocFuncion ')'
  31            | '(' expresion ')'
  32            | CTE_ENTERA
  33            | CTE_REAL
  34            | CTE_CARACTER
  35            | ID
  36            | expresion '[' expresion ']'
  37            | reglas_comparacion
  38            | '-' expresion

  39  reglas_logica : exp_bool Y exp_bool
  40                | exp_bool O exp_bool
  41                | '!' expresion
  42                | '(' exp_bool ')'

  43  reglas_comparacion : expresion '>' expresion
  44                     | expresion '<' expresion
  45                     | expresion MAYORIGUAL expresion
  46                     | expresion MENORIGUAL expresion
  47                     | expresion DISTINTO expresion
  48                     | expresion IGUALDAD expresion

  49  exp_bool : expresion
  50           | reglas_logica

  51  lista_de_campos : lista_de_campos campo
  52                  | campo

  53  campo : lista_indentificadores AS tipo ';'

  54  sentencia : PRINT expresiones ';'
  55            | INPUT expresiones ';'
  56            | expresion '=' expresion ';'
  57            | RETURN expresion ';'
  58            | ID '(' argumentos_InvocFuncion ')' ';'
  59            | while
  60            | if

  61  expresiones : expresiones ',' exp_bool
  62              | exp_bool

  63  while : WHILE exp_bool '{' lista_de_sentencias '}'
  64        | WHILE exp_bool sentencia

  65  if : IF exp_bool sentencias_if
  66     | IF exp_bool sentencias_if ELSE sentencias_else

  67  sentencias_if : '{' lista_de_sentencias '}'
  68                | sentencia

  69  sentencias_else : '{' lista_de_sentencias '}'
  70                  | sentencia

  71  tipo : INT
  72       | DOUBLE
  73       | CHAR
  74       | tipo '[' CTE_ENTERA ']'
  75       | STRUCT '{' lista_de_campos '}'

state 0
	$accept : . programa $end  (0)

	ID  shift 1
	DEF  shift 2
	.  error

	programa  goto 3
	lista_definiciones  goto 4
	definiciones  goto 5
	defFuncion  goto 6
	declaracion  goto 7
	lista_indentificadores  goto 8


state 1
	lista_indentificadores : ID .  (14)

	.  reduce 14


state 2
	defFuncion : DEF . ID '(' parametros ')' AS tipo '{' lista_de_declaraciones lista_de_sentencias '}'  (6)
	defFuncion : DEF . ID '(' parametros ')' '{' lista_de_declaraciones lista_de_sentencias '}'  (7)

	ID  shift 9
	.  error


state 3
	$accept : programa . $end  (0)

	$end  accept


state 4
	programa : lista_definiciones .  (1)
	lista_definiciones : lista_definiciones . definiciones  (2)

	ID  shift 1
	DEF  shift 2
	$end  reduce 1

	definiciones  goto 10
	defFuncion  goto 6
	declaracion  goto 7
	lista_indentificadores  goto 8


state 5
	lista_definiciones : definiciones .  (3)

	.  reduce 3


state 6
	definiciones : defFuncion .  (4)

	.  reduce 4


state 7
	definiciones : declaracion .  (5)

	.  reduce 5


state 8
	declaracion : lista_indentificadores . AS tipo ';'  (12)
	lista_indentificadores : lista_indentificadores . ',' ID  (13)

	AS  shift 11
	','  shift 12
	.  error


state 9
	defFuncion : DEF ID . '(' parametros ')' AS tipo '{' lista_de_declaraciones lista_de_sentencias '}'  (6)
	defFuncion : DEF ID . '(' parametros ')' '{' lista_de_declaraciones lista_de_sentencias '}'  (7)

	'('  shift 13
	.  error


state 10
	lista_definiciones : lista_definiciones definiciones .  (2)

	.  reduce 2


state 11
	declaracion : lista_indentificadores AS . tipo ';'  (12)

	INT  shift 14
	DOUBLE  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	.  error

	tipo  goto 18


state 12
	lista_indentificadores : lista_indentificadores ',' . ID  (13)

	ID  shift 19
	.  error


state 13
	defFuncion : DEF ID '(' . parametros ')' AS tipo '{' lista_de_declaraciones lista_de_sentencias '}'  (6)
	defFuncion : DEF ID '(' . parametros ')' '{' lista_de_declaraciones lista_de_sentencias '}'  (7)
	parametro : .  (18)

	ID  shift 20
	')'  reduce 18
	','  reduce 18

	parametros  goto 21
	parametro  goto 22


state 14
	tipo : INT .  (71)

	.  reduce 71


state 15
	tipo : DOUBLE .  (72)

	.  reduce 72


state 16
	tipo : CHAR .  (73)

	.  reduce 73


state 17
	tipo : STRUCT . '{' lista_de_campos '}'  (75)

	'{'  shift 23
	.  error


state 18
	declaracion : lista_indentificadores AS tipo . ';'  (12)
	tipo : tipo . '[' CTE_ENTERA ']'  (74)

	'['  shift 24
	';'  shift 25
	.  error


state 19
	lista_indentificadores : lista_indentificadores ',' ID .  (13)

	.  reduce 13


state 20
	parametro : ID . AS tipo  (17)

	AS  shift 26
	.  error


state 21
	defFuncion : DEF ID '(' parametros . ')' AS tipo '{' lista_de_declaraciones lista_de_sentencias '}'  (6)
	defFuncion : DEF ID '(' parametros . ')' '{' lista_de_declaraciones lista_de_sentencias '}'  (7)
	parametros : parametros . ',' parametro  (15)

	')'  shift 27
	','  shift 28
	.  error


state 22
	parametros : parametro .  (16)

	.  reduce 16


state 23
	tipo : STRUCT '{' . lista_de_campos '}'  (75)

	ID  shift 1
	.  error

	lista_indentificadores  goto 29
	lista_de_campos  goto 30
	campo  goto 31


state 24
	tipo : tipo '[' . CTE_ENTERA ']'  (74)

	CTE_ENTERA  shift 32
	.  error


state 25
	declaracion : lista_indentificadores AS tipo ';' .  (12)

	.  reduce 12


state 26
	parametro : ID AS . tipo  (17)

	INT  shift 14
	DOUBLE  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	.  error

	tipo  goto 33


state 27
	defFuncion : DEF ID '(' parametros ')' . AS tipo '{' lista_de_declaraciones lista_de_sentencias '}'  (6)
	defFuncion : DEF ID '(' parametros ')' . '{' lista_de_declaraciones lista_de_sentencias '}'  (7)

	AS  shift 34
	'{'  shift 35
	.  error


state 28
	parametros : parametros ',' . parametro  (15)
	parametro : .  (18)

	ID  shift 20
	')'  reduce 18
	','  reduce 18

	parametro  goto 36


state 29
	lista_indentificadores : lista_indentificadores . ',' ID  (13)
	campo : lista_indentificadores . AS tipo ';'  (53)

	AS  shift 37
	','  shift 12
	.  error


state 30
	lista_de_campos : lista_de_campos . campo  (51)
	tipo : STRUCT '{' lista_de_campos . '}'  (75)

	ID  shift 1
	'}'  shift 38
	.  error

	lista_indentificadores  goto 29
	campo  goto 39


state 31
	lista_de_campos : campo .  (52)

	.  reduce 52


state 32
	tipo : tipo '[' CTE_ENTERA . ']'  (74)

	']'  shift 40
	.  error


state 33
	parametro : ID AS tipo .  (17)
	tipo : tipo . '[' CTE_ENTERA ']'  (74)

	'['  shift 24
	')'  reduce 17
	','  reduce 17


state 34
	defFuncion : DEF ID '(' parametros ')' AS . tipo '{' lista_de_declaraciones lista_de_sentencias '}'  (6)

	INT  shift 14
	DOUBLE  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	.  error

	tipo  goto 41


state 35
	defFuncion : DEF ID '(' parametros ')' '{' . lista_de_declaraciones lista_de_sentencias '}'  (7)
	lista_de_declaraciones : .  (11)

	.  reduce 11

	lista_de_declaraciones  goto 42


state 36
	parametros : parametros ',' parametro .  (15)

	.  reduce 15


state 37
	campo : lista_indentificadores AS . tipo ';'  (53)

	INT  shift 14
	DOUBLE  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	.  error

	tipo  goto 43


state 38
	tipo : STRUCT '{' lista_de_campos '}' .  (75)

	.  reduce 75


state 39
	lista_de_campos : lista_de_campos campo .  (51)

	.  reduce 51


state 40
	tipo : tipo '[' CTE_ENTERA ']' .  (74)

	.  reduce 74


state 41
	defFuncion : DEF ID '(' parametros ')' AS tipo . '{' lista_de_declaraciones lista_de_sentencias '}'  (6)
	tipo : tipo . '[' CTE_ENTERA ']'  (74)

	'['  shift 24
	'{'  shift 44
	.  error


state 42
	defFuncion : DEF ID '(' parametros ')' '{' lista_de_declaraciones . lista_de_sentencias '}'  (7)
	lista_de_declaraciones : lista_de_declaraciones . declaracion  (10)
	lista_de_sentencias : .  (9)

	CTE_ENTERA  shift 45
	ID  shift 46
	WHILE  shift 47
	IF  shift 48
	CTE_REAL  shift 49
	CTE_CARACTER  shift 50
	RETURN  shift 51
	INPUT  shift 52
	PRINT  shift 53
	'-'  shift 54
	'('  shift 55
	'}'  reduce 9

	declaracion  goto 56
	lista_de_sentencias  goto 57
	sentencia  goto 58
	lista_indentificadores  goto 8
	expresion  goto 59
	reglas_comparacion  goto 60
	while  goto 61
	if  goto 62


state 43
	campo : lista_indentificadores AS tipo . ';'  (53)
	tipo : tipo . '[' CTE_ENTERA ']'  (74)

	'['  shift 24
	';'  shift 63
	.  error


state 44
	defFuncion : DEF ID '(' parametros ')' AS tipo '{' . lista_de_declaraciones lista_de_sentencias '}'  (6)
	lista_de_declaraciones : .  (11)

	.  reduce 11

	lista_de_declaraciones  goto 64


state 45
	expresion : CTE_ENTERA .  (32)

	.  reduce 32


state 46
	lista_indentificadores : ID .  (14)
	expresion : ID . '(' argumentos_InvocFuncion ')'  (30)
	expresion : ID .  (35)
	sentencia : ID . '(' argumentos_InvocFuncion ')' ';'  (58)

	'('  shift 65
	IGUALDAD  reduce 35
	DISTINTO  reduce 35
	MAYORIGUAL  reduce 35
	MENORIGUAL  reduce 35
	AS  reduce 14
	CAST  reduce 35
	'='  reduce 35
	'>'  reduce 35
	'<'  reduce 35
	'+'  reduce 35
	'-'  reduce 35
	'*'  reduce 35
	'/'  reduce 35
	'%'  reduce 35
	'['  reduce 35
	'.'  reduce 35
	','  reduce 14


state 47
	while : WHILE . exp_bool '{' lista_de_sentencias '}'  (63)
	while : WHILE . exp_bool sentencia  (64)

	CTE_ENTERA  shift 45
	ID  shift 66
	CTE_REAL  shift 49
	CTE_CARACTER  shift 50
	'!'  shift 67
	'-'  shift 54
	'('  shift 68
	.  error

	expresion  goto 69
	reglas_comparacion  goto 60
	reglas_logica  goto 70
	exp_bool  goto 71


state 48
	if : IF . exp_bool sentencias_if  (65)
	if : IF . exp_bool sentencias_if ELSE sentencias_else  (66)

	CTE_ENTERA  shift 45
	ID  shift 66
	CTE_REAL  shift 49
	CTE_CARACTER  shift 50
	'!'  shift 67
	'-'  shift 54
	'('  shift 68
	.  error

	expresion  goto 69
	reglas_comparacion  goto 60
	reglas_logica  goto 70
	exp_bool  goto 72


state 49
	expresion : CTE_REAL .  (33)

	.  reduce 33


state 50
	expresion : CTE_CARACTER .  (34)

	.  reduce 34


state 51
	sentencia : RETURN . expresion ';'  (57)

	CTE_ENTERA  shift 45
	ID  shift 66
	CTE_REAL  shift 49
	CTE_CARACTER  shift 50
	'-'  shift 54
	'('  shift 55
	.  error

	expresion  goto 73
	reglas_comparacion  goto 60


state 52
	sentencia : INPUT . expresiones ';'  (55)

	CTE_ENTERA  shift 45
	ID  shift 66
	CTE_REAL  shift 49
	CTE_CARACTER  shift 50
	'!'  shift 67
	'-'  shift 54
	'('  shift 68
	.  error

	expresion  goto 69
	reglas_comparacion  goto 60
	reglas_logica  goto 70
	exp_bool  goto 74
	expresiones  goto 75


state 53
	sentencia : PRINT . expresiones ';'  (54)

	CTE_ENTERA  shift 45
	ID  shift 66
	CTE_REAL  shift 49
	CTE_CARACTER  shift 50
	'!'  shift 67
	'-'  shift 54
	'('  shift 68
	.  error

	expresion  goto 69
	reglas_comparacion  goto 60
	reglas_logica  goto 70
	exp_bool  goto 74
	expresiones  goto 76


state 54
	expresion : '-' . expresion  (38)

	CTE_ENTERA  shift 45
	ID  shift 66
	CTE_REAL  shift 49
	CTE_CARACTER  shift 50
	'-'  shift 54
	'('  shift 55
	.  error

	expresion  goto 77
	reglas_comparacion  goto 60


state 55
	expresion : '(' . expresion ')'  (31)

	CTE_ENTERA  shift 45
	ID  shift 66
	CTE_REAL  shift 49
	CTE_CARACTER  shift 50
	'-'  shift 54
	'('  shift 55
	.  error

	expresion  goto 78
	reglas_comparacion  goto 60


state 56
	lista_de_declaraciones : lista_de_declaraciones declaracion .  (10)

	.  reduce 10


state 57
	defFuncion : DEF ID '(' parametros ')' '{' lista_de_declaraciones lista_de_sentencias . '}'  (7)

	'}'  shift 79
	.  error


state 58
	lista_de_sentencias : sentencia . lista_de_sentencias  (8)
	lista_de_sentencias : .  (9)

	CTE_ENTERA  shift 45
	ID  shift 80
	WHILE  shift 47
	IF  shift 48
	CTE_REAL  shift 49
	CTE_CARACTER  shift 50
	RETURN  shift 51
	INPUT  shift 52
	PRINT  shift 53
	'-'  shift 54
	'('  shift 55
	'}'  reduce 9

	lista_de_sentencias  goto 81
	sentencia  goto 58
	expresion  goto 59
	reglas_comparacion  goto 60
	while  goto 61
	if  goto 62


state 59
	expresion : expresion . '+' expresion  (23)
	expresion : expresion . '-' expresion  (24)
	expresion : expresion . '*' expresion  (25)
	expresion : expresion . '/' expresion  (26)
	expresion : expresion . '%' expresion  (27)
	expresion : expresion . CAST tipo  (28)
	expresion : expresion . '.' ID  (29)
	expresion : expresion . '[' expresion ']'  (36)
	reglas_comparacion : expresion . '>' expresion  (43)
	reglas_comparacion : expresion . '<' expresion  (44)
	reglas_comparacion : expresion . MAYORIGUAL expresion  (45)
	reglas_comparacion : expresion . MENORIGUAL expresion  (46)
	reglas_comparacion : expresion . DISTINTO expresion  (47)
	reglas_comparacion : expresion . IGUALDAD expresion  (48)
	sentencia : expresion . '=' expresion ';'  (56)

	IGUALDAD  shift 82
	DISTINTO  shift 83
	MAYORIGUAL  shift 84
	MENORIGUAL  shift 85
	CAST  shift 86
	'='  shift 87
	'>'  shift 88
	'<'  shift 89
	'+'  shift 90
	'-'  shift 91
	'*'  shift 92
	'/'  shift 93
	'%'  shift 94
	'['  shift 95
	'.'  shift 96
	.  error


state 60
	expresion : reglas_comparacion .  (37)

	.  reduce 37


state 61
	sentencia : while .  (59)

	.  reduce 59


state 62
	sentencia : if .  (60)

	.  reduce 60


state 63
	campo : lista_indentificadores AS tipo ';' .  (53)

	.  reduce 53


state 64
	defFuncion : DEF ID '(' parametros ')' AS tipo '{' lista_de_declaraciones . lista_de_sentencias '}'  (6)
	lista_de_declaraciones : lista_de_declaraciones . declaracion  (10)
	lista_de_sentencias : .  (9)

	CTE_ENTERA  shift 45
	ID  shift 46
	WHILE  shift 47
	IF  shift 48
	CTE_REAL  shift 49
	CTE_CARACTER  shift 50
	RETURN  shift 51
	INPUT  shift 52
	PRINT  shift 53
	'-'  shift 54
	'('  shift 55
	'}'  reduce 9

	declaracion  goto 56
	lista_de_sentencias  goto 97
	sentencia  goto 58
	lista_indentificadores  goto 8
	expresion  goto 59
	reglas_comparacion  goto 60
	while  goto 61
	if  goto 62


state 65
	expresion : ID '(' . argumentos_InvocFuncion ')'  (30)
	sentencia : ID '(' . argumentos_InvocFuncion ')' ';'  (58)
	InvocFuncion : .  (22)

	CTE_ENTERA  shift 45
	ID  shift 66
	CTE_REAL  shift 49
	CTE_CARACTER  shift 50
	'-'  shift 54
	'('  shift 55
	')'  reduce 22
	','  reduce 22

	argumentos_InvocFuncion  goto 98
	InvocFuncion  goto 99
	expresion  goto 100
	reglas_comparacion  goto 60


state 66
	expresion : ID . '(' argumentos_InvocFuncion ')'  (30)
	expresion : ID .  (35)

	'('  shift 101
	CTE_ENTERA  reduce 35
	ID  reduce 35
	WHILE  reduce 35
	IF  reduce 35
	IGUALDAD  reduce 35
	DISTINTO  reduce 35
	MAYORIGUAL  reduce 35
	MENORIGUAL  reduce 35
	CTE_REAL  reduce 35
	CTE_CARACTER  reduce 35
	O  reduce 35
	Y  reduce 35
	RETURN  reduce 35
	INPUT  reduce 35
	PRINT  reduce 35
	CAST  reduce 35
	'='  reduce 35
	'>'  reduce 35
	'<'  reduce 35
	'+'  reduce 35
	'-'  reduce 35
	'*'  reduce 35
	'/'  reduce 35
	'%'  reduce 35
	'['  reduce 35
	']'  reduce 35
	'.'  reduce 35
	')'  reduce 35
	'{'  reduce 35
	';'  reduce 35
	','  reduce 35


state 67
	reglas_logica : '!' . expresion  (41)

	CTE_ENTERA  shift 45
	ID  shift 66
	CTE_REAL  shift 49
	CTE_CARACTER  shift 50
	'-'  shift 54
	'('  shift 55
	.  error
